# cpp-interview-all

./: .gitignore  AGENTS.md  ALL_IN_ONE.md  README.md  build_epub.py  ch01_编程语言基础.md  ch02_进阶C++与标准库.md  ch03_操作系统与Linux.md  ch04_数据库与缓存.md  ch05_数据结构与算法.md  ch06_算法刷题题解.md  ch07_设计模式与项目实践.md  ch08_系统设计与分布式.md  ch09_AI与LLM面试追问.md  cpp_interview_guide.md  cppinter_面试指南.epub  index.md  merge_algorithm.py  merge_algorithm_v2.py  merge_algorithm_v3.py  merge_algorithm_v4.py  mini_all.md
TechCPP/: README.md
ch01_编程语言基础/: 00_章节前言.md  02_1_2_数组与字符串.md  03_1_3_内存管理.md  04_1_1_指针与引用.md  05_1_5_预处理与编译链接.md  06_1_4_struct_与_union.md  07_前言.md  08_目录.md  09_CC.md  10_Effective.md  11_STL.md  12_数据结构.md  13_算法.md  14_Problems.md  15_操作系统.md  16_计算机网络.md  17_网络编程.md  18_数据库.md  19_设计模式.md  20_链接装载库.md  21_书籍.md  22_CC_发展方向.md  23_复习刷题网站.md  24_面试题目经验.md  25_招聘时间岗位.md  26_内推.md  27_贡献者.md  28_License.md  29_C_入门教程精简说明.md  30_参考资料.md  31_C_学习笔记.md  32_problems__如何在main函数前执行代码_md.md
ch02_进阶C++与标准库/: 00_章节前言.md  02_现代_C_特性速览_C_1114172023.md  03_problems__noexcept详解_md.md  04_problems__thread_local详解_md.md  05_problems__emplace_back和push_back有什么区别_md.md  06_CAS.md  07_SmartPointer.md  08_容器_containers.md  09_算法_algorithms.md  10_STL_容器与算法参考.md  11_2_1_类与对象.md  12_2_2_继承与组合.md  13_2_3_多态与虚函数.md  14_2_4_智能指针.md  15_2_5_虚函数深度剖析.md  16_problems___define和const的区别有哪些_md.md  17_problems__C_中struct和class有什么区别_md.md  18_problems__C_中动态链接库和静态连接库的区别是什么_md.md  19_problems__C_中右值引用有什么作用_md.md  20_problems__C_中四种cast的转换_md.md  21_problems__C_中常用的类优化技术有哪些_md.md  22_problems__C_中类成员的访问权限有哪些_md.md  23_problems__C_中结构体内存布局的规则是什么_md.md  24_problems__C_中_结构体可以直接赋值吗_md.md  25_problems__C_内存分配_md.md  26_problems__C_多态的实现有那几种_他们有什么不同_md.md  27_problems__C_的atomic_bool代码底层是如何实现的_md.md  28_problems__C_的智能指针及其原理_md.md  29_problems__C_结构体内存对齐_md.md  30_problems__STL中一般都有哪些常见的算法库呢_md.md  31_STL中的优先级队列是如何实现的.md  32_problems__STL中_map的底层是如何实现的_md.md  33_problems__STL中_set的底层是如何实现的_md.md  34_problems__STL原理及实现_md.md  35_problems__STL容器是线程安全的吗_md.md  36_problems__git的merge和rebase有什么区别_md.md  37_problems__lower_bound_和upper_bound_有什么区别_md.md  38_problems__override和overload的区别有哪些_md.md  39_problems__set_multiset_map_multimap之间都有什么区别_md.md  40_problems__weak_ptr是如何解决shared_ptr循环引用的_md.md  (+58 more)
ch03_操作系统与Linux/: 00_章节前言.md  02_当前目录仅包含_README_md_正文为历史文档合并知识点汇总_若出现旧文件名式标题_表示章节来源_不代表当前目录存在对应文件.md  03_problems__32位系统一个进程最多有多少堆内存_md.md  04_problems__Linux上有个二进制程序一直在运行_我修改代码置换重新编译把原来的二进制程序覆盖了_会怎么样_md.md  05_problems__linux文件系统_inode_inode存储了哪些东西_目录名_文件名存在哪里_md.md  06_problems__linux的内存管理机制内存寻址方式什么叫虚拟内存内存调页算法任务调度算法_md.md  07_problems__linux系统的各类同步机制_linux系统的各类异步机制_md.md  08_problems__一段代码从程序到执行经历怎么样的过程_程序在计算机中是如何运行起来的_md.md  09_problems__为什么CPU访问寄存器的速度比访问内存或CPUCache的速度快_md.md  100_problems__介绍下Socket编程_md.md  101_problems__从本地读取一个文件通过网络发送到另一端_中间涉及几次拷贝_md.md  102_problems__列举你所知道的tcp选项_md.md  (+103 more)
learn-C-/Interview/CAS/: CMakeLists.txt  README.md
learn-C-/Interview/CAS/include/: cas_primitives.h
learn-C-/Interview/CAS/src/: cas_demo.cpp  cas_primitives.cpp
learn-C-/Interview/CAS/tests/: test_cas.cpp
learn-C-/Interview/CrossProcess/: CMakeLists.txt
learn-C-/Interview/CrossProcess/include/: ipc_file_lock.h  ipc_shared_counter.h  ipc_shared_queue.h
learn-C-/Interview/CrossProcess/src/: file_lock_demo.cpp  ipc_file_lock.cpp  ipc_shared_counter.cpp  ipc_shared_queue.cpp  shared_counter_demo.cpp  shared_queue_demo.cpp
learn-C-/Interview/CrossProcess/tests/: test_cross_process.cpp
learn-C-/Interview/MemoryPool/: CMakeLists.txt  README.md
learn-C-/Interview/MemoryPool/build-coverage/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  memory_pool_tests
learn-C-/Interview/MemoryPool/build-coverage/coverage/: aligned_buffer.h.gcov  alloc_traits.h.gcov  allocator.h.gcov  basic_string.h.gcov  basic_string.tcc.gcov  char_traits.h.gcov  coverage_summary.txt  cpp_type_traits.h.gcov  fixed_memory_pool.cpp.gcov  fixed_memory_pool.h.gcov  functional_hash.h.gcov  gthr-default.h.gcov  hashtable.h.gcov  hashtable_policy.h.gcov  initializer_list.gcov  invoke.h.gcov  memory_pool_extensions.cpp.gcov  memory_pool_extensions.h.gcov  move.h.gcov  new.gcov  new_allocator.h.gcov  predefined_ops.h.gcov  ptr_traits.h.gcov  std_function.h.gcov  std_mutex.h.gcov  stl_algo.h.gcov  stl_algobase.h.gcov  stl_construct.h.gcov  stl_function.h.gcov  stl_heap.h.gcov  stl_iterator.h.gcov  stl_iterator_base_funcs.h.gcov  stl_iterator_base_types.h.gcov  stl_uninitialized.h.gcov  stl_vector.h.gcov  test_memory_pool.cpp.gcov  test_output.txt  thread.gcov  tuple.gcov  type_traits.h.gcov  (+3 more)
learn-C-/Interview/MemoryPool/cmake/: GenerateCoverage.cmake
learn-C-/Interview/MemoryPool/include/: fixed_memory_pool.h  memory_pool_extensions.h
learn-C-/Interview/MemoryPool/src/: benchmark.cpp  fixed_memory_pool.cpp  main.cpp  memory_pool_extensions.cpp
learn-C-/Interview/MemoryPool/tests/: test_memory_pool.cpp
learn-C-/Interview/Network/: CMakeLists.txt  README.md
learn-C-/Interview/Network/include/: network_echo.h
learn-C-/Interview/Network/src/: main.cpp  network_echo.cpp
learn-C-/Interview/Network/tests/: test_network.cpp
learn-C-/Interview/RPC/: CMakeLists.txt
learn-C-/Interview/RPC/include/: rpc_framework.h
learn-C-/Interview/RPC/src/: main.cpp  rpc_framework.cpp
learn-C-/Interview/RPC/tests/: test_rpc.cpp
learn-C-/Interview/SmartPointer/: CMakeLists.txt  README.md
learn-C-/Interview/SmartPointer/include/: smart_pointer_demo.h
learn-C-/Interview/SmartPointer/src/: main.cpp  smart_pointer_demo_lib.cpp
learn-C-/Interview/SmartPointer/tests/: test_smart_pointer.cpp
learn-C-/Interview/ThreadPool/: CMakeLists.txt  README.md
learn-C-/Interview/ThreadPool/include/: thread_pool.h
learn-C-/Interview/ThreadPool/src/: main.cpp  thread_pool.cpp
learn-C-/Interview/ThreadPool/tests/: test_thread_pool.cpp
learn-C-/Interview/Timer/: CMakeLists.txt
learn-C-/Interview/Timer/include/: timer_scheduler.h
learn-C-/Interview/Timer/src/: main.cpp  timer_scheduler.cpp
learn-C-/Interview/Timer/tests/: test_timer.cpp
(+169 files in other folders)
